# TechCensusAnalysis

./: README.md  pyproject.toml
src/: .gitignore  census_data.py  census_data_plotly.py  config.py  config_2021q2.py  config_2021q4.py  make_plots.py  open-sheet.py  read_sheets.py
