[tool.poetry]
name = "techcensusanalysis"
version = "0.1.0"
description = "tools for analysing tech census data"
authors = ["Scott Shaw"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
gspread = "^3.7.0"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
